--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,8 @@ serde = ["color/serde", "smallvec/serde", "kurbo/serde", "dep:serde_bytes", "dep
 
 [dependencies]
 # NOTE: Make sure to keep this in sync with the version badge in README.md
-kurbo = { version = "0.11.2", default-features = false }
+# See: https://github.com/linebender/kurbo/compare/main...taj-p:kurbo:tajp/fastStrokeOnMain
+kurbo = { git = "https://github.com/taj-p/kurbo.git", rev = "8c47b0bc9bbc3f5949057fccc2c179f694d482db", default-features = false }
 smallvec = "1.15.0"
 
 [dependencies.bytemuck]
