--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,9 @@ serde = ["color/serde", "smallvec/serde", "kurbo/serde", "dep:serde_bytes", "dep
 
 [dependencies]
 # NOTE: Make sure to keep this in sync with the version badge in README.md
-# See: https://github.com/linebender/kurbo/compare/main...taj-p:kurbo:tajp/fastStrokeOnMain
-kurbo = { git = "https://github.com/taj-p/kurbo.git", rev = "8c47b0bc9bbc3f5949057fccc2c179f694d482db", default-features = false }
-smallvec = "1.15.0"
+# Kurbo main.
+kurbo = { git = "https://github.com/linebender/kurbo.git", rev = "1312d43a6ef78e3eaea6e2209e942d9426766f04", default-features = false }
+smallvec = "1.15.1"
 
 [dependencies.bytemuck]
 version = "1.23.0"
