--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ serde = ["color/serde", "smallvec/serde", "kurbo/serde", "dep:serde_bytes", "dep
 [dependencies]
 # NOTE: Make sure to keep this in sync with the version badge in README.md
 # Kurbo main.
-kurbo = { git = "https://github.com/linebender/kurbo.git", rev = "1312d43a6ef78e3eaea6e2209e942d9426766f04", default-features = false }
+kurbo = { version = "0.12.0", default-features = false }
 smallvec = "1.15.1"
 
 [dependencies.bytemuck]
